Section off right and left panel in user content pages - sectioned off left and right panel to leftPanel.jspf, rightPanel.jspf - changed color of panels in style.css

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -8,7 +8,7 @@
 }
 #left-panel{
     width: 20%;
-    background-color: orange;
+    background-color: #ffb843;
     min-width: 100px;
 }
 .nick{
@@ -50,7 +50,7 @@
 /*--- Right panel on main site ---*/
 #right-panel{
     width: 20%;
-    background-color: lightgray;
+    background-color: #ffb843;
     min-width: 100px;
 }
 #right-panel-inside{
