Displaying given user chirps - added action (userProfile()) in HomeController and view (userProfile.jsp) for displaying page with given user chirps - sectioned off jQuery code for building and displaying each chirp on a page in addChirpsToPage() function in app.js - added function getLoggedUser() for adding links to the leftPanel.jspf pointing to logged user profile page - added userProfile.js with functions for obtaining user nick from url (getNickFromUrl()), getting all given user chirps base on nick from url (getAllUserChirps(userNick)), adding user nick to page title (addPageTitleWithUserNickFromUrl()) - added gray color for links with user nick in chirps in style.css - added findChirpsByUserNick(String nick); in ChirpRepository - added findAllUserChirpsByNick(String nick) in ChirpService - added getAllUserChirps(@PathVariable String userNick) in ChirpRestController - added address "/*" authentication in configure method in SecurityConfig

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -76,6 +76,9 @@ a {
 .chirpTitleGray{
     color: #505050;
 }
+.chirpTitleGray a {
+    color: #505050;
+}
 #chirpFeed {
     margin-left: 15px;
     margin-right: 15px;
