New home page address /home and chirp styling on hover - changed address of main page from "/" to "/home" + securing access in SecurityConfig - added redirection from "/" to "/home" in HomeController - unified adn changed styling on mouse hover over links - new chirp made by addChirpsToPage() in app.js is now wrapped in link, link points to given chirp page

--- a/src/main/webapp/WEB-INF/views/user/leftPanel.jspf
+++ b/src/main/webapp/WEB-INF/views/user/leftPanel.jspf
@@ -3,7 +3,7 @@
     <div id="left-panel-inside">
 
                 <span id="chirp-logo">
-                    <a href="<c:url value="/" />">Chirp</a>
+                    <a href="<c:url value="/home" />">Chirp</a>
                 </span>
 
             <span class="nick">
@@ -13,7 +13,7 @@
             <div id="left-panel-menu">
                 <ul>
                     <li>
-                        <a href="<c:url value="/" />">Home</a>
+                        <a href="<c:url value="/home" />">Home</a>
                     </li>
                     <li>
                         <a data="user" href="/">Profile</a>
