Displaying single chirp - added action in HomeController and view (singleChirp.jsp) for displaying page with single chirp - added action in ChirpRestController for querying single chirp - added findChirpByIdAndNick(long id, String nick) method in ChirpService for finding single chirp - now single chirp as last destination is no longer a link, no css style changed on mouse hover - sectioned off all of jQuery code - added singleChirp.jsp - added 'rel' and 'type' attributes in jsp pages <head> links and scripts elements - access to all addresses except "/login" and "/register" is required to be authenticated (SecurityConfig)

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -83,7 +83,7 @@ a {
 .chirpTitleGray a {
     color: #505050;
 }
-#chirpFeed, #userChirpFeed {
+#chirpFeed, #userChirpFeed, #singleChirp {
     margin-left: 15px;
     margin-right: 15px;
 }
@@ -91,7 +91,7 @@ a {
     margin-left: 15px;
     margin-right: 15px;
 }
-.chirp{
+.chirp, .singleChirp{
     border-radius: 5px;
     padding: 2px 5px 2px 5px;
 }
